# sonic_ff

./: .gitignore  .gitmodules  Actor.cpp  Actor.h  ActorState.h  CMakeLists.txt  CMakePresets.json  GameWindow.cpp  GameWindow.h  Geometry.cpp  Geometry.h  MapLayer.cpp  MapLayer.h  SpriteAction.h  SpriteProvider.cpp  SpriteSheet.cpp  SpriteSheet.h  Texture.cpp  Texture.h  TilesetConfig.cpp  TilesetConfig.h  main.cpp  sonic_ff.kdev4  sonic_sprite_cfg.json  vcpkg.json
assets/: robotropolis-sheet.json  robotropolis-sheet.tsx  robotropolis.tmj  robotropolis.tmx  robotropolis.tsx
sprites/: sonic-idle.aseprite  sonic-jog.aseprite  sonic-run.aseprite  sonic-walk.aseprite  sonic3a.xcf  sonic_new_run1.xcf
sprites/robotropolis/: boulder.xcf  fan.xcf  ground.xcf  ground_yellow.xcf  pipe-wall-top.xcf  robotropolis-sheet.json  rock.xcf  sewer_grate.xcf  vent.xcf  wall_ground_angled.xcf
